PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.1.0
- Moved extensions to PECL:
  . ext/dio    (Jani, Derick)
  . ext/yp     (Jani, Derick)
  . ext/w32api (Jani, Derick)
- Changed stream_filter_(ap|pre)pend() to return resource. (Sara)
- Changed mysqli_exception and sqlite_exception to use RuntimeException as base 
  if SPL extension is present. (Georg, Marcus)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Improved support for embedded server in mysqli. (Georg)
- Improved performance of:
  . general execution/compilation. (Andi, Thies, Sterling, Dmitry, Marcus)
  . switch() statement. (Dmitry)
  . several array functions. (Marcus)
  . virtual path handling by adding a realpath() cache. (Andi)
  . variable fetches. (Andi)
  . magic method invocations. (Marcus)
- Added new classes in mysqli: mysqli_driver, mysqli_warning, mysqli_exception,
  and mysqli_sql_exception. (Georg)
- Added possibility to access INI variables from within .ini file. (Andrei)
- Added constructors for mysqli_stmt and mysqli_result classes. (Georg)
- Added variable $_SERVER['REQUEST_TIME'] containing request start time. (Ilia)
- Added optional float parameter to gettimeofday(). (Ilia)
- Added apache_reset_timeout() Apache1 function. (Rasmus)
- Added sqlite_fetch_column_types() 3rd argument for arrays. (Ilia)
- Added optional offset parameter to stream_get_contents() and
  file_get_contents(). (Ilia)
- Added SAPI hook to get the current request time. (Rasmus)
- Added new functions:
  . array_diff_key() (Andrey)
  . array_diff_ukey() (Andrey)
  . array_intersect_key() (Christiano Duarte)
  . array_intersect_ukey() (Christiano Duarte)
  . stream_context_get_default() (Wez)
  . stream_socket_enable_crypto() (Wez)
  . stream_wrapper_unregister() (Sara)
  . stream_wrapper_restore() (Sara)